<resources>
    <string name="app_name">My96Chat</string>
    <string name="intro_message">This is My96Chat!\nIn this app you can invite your 96 ghetto\n to talk for your deals and more</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in_email_text_hint">Email</string>
    <string name="sign_in_password_text_hint">Password</string>
    <string name="sign_up_name_text_hint">Name</string>
    <string name="sign_up_phone_text_hint">Phone</string>
    <string name="permission_error">You have denied the permission. You can change that from the settings</string>
    <string name="sign_in_error">Error Sign In</string>
    <string name="load_image_error">Error in loading image</string>
    <string name="add_user">Add User</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="log_out">Log Out</string>
    <string name="default_notification_channel_id">notification_channel_default</string>
</resources>