<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".activities.IntroActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/intro_title_margin_top"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/intro_title_text_size"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="@dimen/intro_image_size"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/intro_image_margin_top"
        android:src="@drawable/ic_icon_cube" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/intro_message_margin_top"
        android:layout_marginBottom="@dimen/intro_message_margin_bottom"
        android:gravity="center"
        android:text="@string/intro_message"
        android:textSize="@dimen/intro_message_text_size" />

    <Button
        android:id="@+id/intro_sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/intro_button_margin_top"
        android:layout_marginHorizontal="@dimen/intro_button_horizontal_margin"
        android:background="@drawable/rounded_solid_button_background"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/sign_in" />

    <Button
        android:id="@+id/intro_sign_up_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/intro_button_margin_top"
        android:layout_marginHorizontal="@dimen/intro_button_horizontal_margin"
        android:background="@drawable/rounded_stroke_button_background"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/sign_up" />
</LinearLayout>